--- a/installer/cli_install_config.yaml
+++ b/installer/cli_install_config.yaml
@@ -1,9 +1,9 @@
 database:
-  hostName: 127.0.0.1
+  hostName: orangehrm-mysql
   hostPort: 3306
-  databaseName: orangehrm_mysql
+  databaseName: ohrmdb
   privilegedDatabaseUser: root
-  privilegedDatabasePassword: root
+  privilegedDatabasePassword: orangehrm123
   useSameDbUserForOrangeHRM: y # y/n, if this field `n` fill `orangehrmDatabaseUser` and `orangehrmDatabasePassword`
   orangehrmDatabaseUser: ~
   orangehrmDatabasePassword: ~
